# ai-juris

./: .gitignore  README.md  pyproject.toml
app/: evaluation.py  preprocessing.py  train.py
app/config/: train_config.json
images/: Dockerfile
notebooks/: example.json  main.ipynb  web-scrapping.ipynb
