[tool.poetry]
name = "ai-juris"
version = "0.1.0"
description = "An AI-powered legal assistant app leveraging fine-tuned open-source LLMs for accurate and efficient legal support"
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.1"
nltk = "^3.9.1"
evaluate = "^0.4.3"
transformers = "^4.47.1"
datasets = "^3.2.0"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
